feat: add returns API routes
