# openapi.yaml
@@ -84,8 +84,8 @@ paths:
           headers:
             X-Request-Id:
               $ref: '#/components/headers/XRequestId'
-        '400':
-          description: Invalid filters supplied.
+        '422':
+          description: Validation error.
           content:
             application/problem+json:
               schema:
@@ -128,8 +128,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Return'
-        '400':
-          description: Payload validation error.
+        '422':
+          description: Validation error.
           content:
             application/problem+json:
               schema:
@@ -146,7 +146,7 @@ paths:
           headers:
             X-Request-Id:
               $ref: '#/components/headers/XRequestId'
-  /api/v1/returns/{returnId}:
+  /api/v1/returns/{return_id}:
     parameters:
       - $ref: '#/components/parameters/ReturnId'
     get:
@@ -174,6 +174,15 @@ paths:
               $ref: '#/components/headers/XRequestId'
         '404':
           description: Return was not found.
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          headers:
+            X-Request-Id:
+              $ref: '#/components/headers/XRequestId'
+        '422':
+          description: Validation error.
           content:
             application/problem+json:
               schema:
@@ -210,8 +219,8 @@ paths:
           headers:
             X-Request-Id:
               $ref: '#/components/headers/XRequestId'
-        '400':
-          description: Payload validation error.
+        '422':
+          description: Validation error.
           content:
             application/problem+json:
               schema:
@@ -252,6 +261,15 @@ paths:
       responses:
         '204':
           description: Return was deleted.
+          headers:
+            X-Request-Id:
+              $ref: '#/components/headers/XRequestId'
+        '422':
+          description: Validation error.
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Error'
           headers:
             X-Request-Id:
               $ref: '#/components/headers/XRequestId'
@@ -614,7 +632,7 @@ components:
         maximum: 100
         default: 20
     ReturnId:
-      name: returnId
+      name: return_id
       in: path
       required: true
       description: Identifier of the return.
